# new_letter_rs

./: Cargo.toml  README.md  configuration.yaml
migrations/: 20240324130012_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
tests/: health_check.rs
