[package]
name = "news_letter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "news_letter"

[dependencies]
actix-web = "4.5.1"
reqwest = "0.11.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1" , features = ["derive"] }
config = "0.14.0"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]